Cbindings/extrachain_c.h

/* ════════════════════════════════════════════════════════════════════
 *  Node lifecycle
 * ════════════════════════════════════════════════════════════════════ */

/*
 * Initialise the node on a background thread.
 * Creates QCoreApplication and starts the Qt event loop internally.
 * ws_port: WebSocket listen port (0 = default 17593).
 * Returns EXC_OK or EXC_ERR_ALREADY_INITIALIZED.
 */
EXC_API ExcError exc_init(int argc, char** argv, uint16_t ws_port);
/* Gracefully shut down the node and free resources. */
EXC_API ExcError exc_shutdown(void);
/* ════════════════════════════════════════════════════════════════════
 *  Memory management
 * ════════════════════════════════════════════════════════════════════ */

EXC_API void exc_string_free(char* str);
EXC_API void exc_mnemonic_free(ExcMnemonic* mnemonic);
/* ════════════════════════════════════════════════════════════════════
 *  Account management
 * ════════════════════════════════════════════════════════════════════ */

/*
 * Create a new profile (BIP39). Automatically generates a seed phrase.
 * login/password are used to encrypt the profile on disk.
 * On success, fills out_mnemonic (caller frees via exc_mnemonic_free).
 */
EXC_API ExcError exc_profile_create(const char* login, const char* password,
                                    ExcMnemonic* out_mnemonic);
/*
 * Import a profile from exported data (JSON string from exc_profile_export).
 * Returns the main ActorId in out_main_id (caller frees via exc_string_free).
 */
EXC_API ExcError exc_profile_import_data(const char* data, const char* login,
                                         const char* password, char** out_main_id);
/*
 * Import a profile from an exported file.
 * Returns the main ActorId in out_main_id (caller frees via exc_string_free).
 */
EXC_API ExcError exc_profile_import_file(const char* file_path, const char* login,
                                         const char* password, char** out_main_id);
/*
 * Export the current profile as a JSON string.
 * Caller frees the result via exc_string_free.
 */
EXC_API ExcError exc_profile_export(char** out_data);